tests/positive/rule5_interpolate.safe
-- Test: rule5_interpolate
-- Description: Linear interpolation between two bounded values.
--   T is in [0.0, 1.0], so the result is between A and B.
--   No NaN or infinity can arise from bounded arithmetic.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139d:56f1f36b
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139b:5e20032b
-- Expected: ACCEPT

package safe_interpolate

   type param is digits 6 range 0.0 to 1.0;
   type value is digits 6 range -1000.0 to 1000.0;

   --  Lerp: linear interpolation A + T * (B - A).
   --  T in 0.0..1.0, A and B in -1000..1000.
   --  B - A is in -2000..2000.
   --  T * (B - A) is in -2000..2000.
   --  A + T * (B - A) is in -3000..3000 worst case,
   --  but since T in [0,1], result is in [min(A,B)..max(A,B)].
   --  Result is finite and within Value range.
   function lerp (a, b : value; t : param) returns value
      result : long_float;

      result = (
         long_float (a)
         + long_float (t) * (long_float (b) - long_float (a))
      );
      --  Narrowing point (return): result is in -1000..1000 (bounded).
      return value (result);

