tests/negative/neg_rule5_infinity.safe
-- Test: neg_rule5_infinity
-- Description: Infinity surviving a narrowing point.
--   Divides a positive value by a very small denominator that could
--   yield infinity. The result is assigned to a bounded float type.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139d:56f1f36b
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139b:5e20032b
-- Expected: REJECT infinity_at_narrowing

package infinity_test

   type bounded_float is digits 6 range -1.0E+10 to 1.0E+10

   --  Overflow_To_Inf: 1.0E+308 / 1.0E-308 overflows to +Infinity
   --  under IEEE 754. Assigning to Bounded_Float is a narrowing point.
   function overflow_to_inf returns bounded_float
      big   : long_float = 1.0E+308
      small : long_float = 1.0E-308

      return bounded_float (big / small)  -- ERROR: result may be infinity

